# text2cypher

./: .env.example  .gitignore  LICENSE  PROJECT_REVIEW.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed.py
backend/app/: config.py  dependencies.py  main.py
backend/app/prompts/: answer_generation.py  text2cypher.py
backend/app/routers/: chat.py  graph.py  schema.py
backend/app/schemas/: chat.py  graph.py
backend/app/services/: chat_service.py  llm_client.py  neo4j_service.py  schema_service.py
frontend/: nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  cytoscape-cose-bilkent.d.ts  index.css  main.tsx
frontend/src/api/: analysisApi.ts  chatApi.ts  graphApi.ts  schemaApi.ts
frontend/src/components/chat/: ChatPanel.tsx  CypherPreview.tsx  MessageList.tsx  QueryResult.tsx  SuggestionCards.tsx
frontend/src/components/common/: ComboboxInput.tsx
frontend/src/components/graph/: EdgeDialog.tsx  GraphCanvas.tsx  GraphCanvas3D.tsx  GraphToolbar.tsx  NodeDialog.tsx  PathFinderPanel.tsx
frontend/src/components/schema/: SchemaView.tsx
frontend/src/constants/: colors.ts
frontend/src/hooks/: useChat.ts  useGraph.ts
frontend/src/types/: analysis.ts  chat.ts  graph.ts
