[project]
name = "backend"
version = "0.1.0"
description = "GraphRAG Practice - Neo4j + Ollama 기반 챗봇"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.129.0",
    "httpx>=0.28.1",
    "neo4j>=6.1.0",
    "ollama>=0.6.1",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.41.0",
]

[project.scripts]
seed = "seed:seed"
